Uppdated the CSS to have a mobile friendly layout when below 45em in width. The text formating when i change the size too much is still bugging me.

--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body {
 
 /* The over flow is just to hide the exces of the image*/
 header {
-  height: 37.5rem;
+  min-height: 37.5rem;
 }
 
 footer {
@@ -61,7 +61,7 @@ p {
 /* Display CSS for the upper part of the header */
 .headertop {
   display: grid;
-  grid-template-columns: repeat(6, 1FR);
+  grid-template-columns: repeat(6 ,1fr);
   grid-template-rows: 17rem 17rem;
 }
 
@@ -95,6 +95,8 @@ header p {
   line-height: 1.5rem;
   letter-spacing: 0em;
   text-align: left;
+  max-height:  9rem;
+  overflow: unset;
 }
 
 /* Styling of the header inside the first box of the header */
@@ -118,6 +120,7 @@ span {
   align-self: flex-end;
   justify-self: flex-end;
   margin-top: -6.563rem;
+  overflow: hidden;
 }
 
 /* Size of the family img in header */
@@ -184,7 +187,7 @@ span {
 /* the height is double the veiwport so that each half part of the  */
 /* FlexBox has been used to centrelize the three parts inside this section */
 #service {
-  height: 80.75rem;
+  min-height: 80.75rem;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -410,7 +413,95 @@ span {
   margin-top: 0.75rem;
 }
 
-/* Animationer - överkurs 
+
+/* Rsponsive layout that kicks in below 40em screen-width */
+@media (max-width: 45em) {
+
+  body {
+    min-width: 25rem;
+  }
+  .headertop {
+    grid-template-columns: repeat(3, 1fr) ;
+    grid-template-rows: repeat(4, 1fr);
+  }
+
+  .headertop article:nth-child(2) {
+    grid-column: 1 / 4;
+    grid-row: 3 / 4;
+  }
+
+  .headertop article:nth-child(3) {
+    grid-column: 1 / 4;
+    grid-row: 4 / 5;
+  }
+
+  .familyimg {
+    margin-bottom: -1rem;
+  }
+
+  .headernav {
+    padding: 0;
+  }
+
+  .splitgradientback {
+    background: linear-gradient(
+      to top,
+      #ffb939 0%,
+      #ffb939 20%,
+      #a9a19e 20%,
+      #a9a19e 100%
+    );
+  }
+
+  #safety {
+    grid-template-rows: 1fr 1fr;
+  }
+
+  #safety h1 {
+    grid-column: 1 /7;
+    grid-row: 1/2;
+    margin-left: 3rem;
+  }
+
+  #safety p {
+    grid-column: 1 /7;
+    grid-row: 2/3;
+    margin-bottom: 3rem;
+  }
+
+  #safety button {
+    display: none;
+  }
+
+  #clients {
+    flex-direction: column;
+    justify-content: space-between;
+    gap: 2rem;
+    align-items: center;
+  }
+
+  #aboutUs {
+    margin-top: 3rem;
+  }
+
+  #howItWorks {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(6, 1fr);
+  }
+
+  #howItWorks h2 {
+    margin-top: 5rem;
+  }
+
+  #howItWorks p {
+    margin-bottom: 7rem;
+  }
+}
+
+
+
+/* Animationer - överkurs  */
 .headerborderlessbutton:hover {
   font-size: 33px;
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.67);
@@ -434,4 +525,4 @@ span {
 #howItWorks p:hover {
   font-size: 18px;
 }
-*/
+
